# spkit

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/in/references/: reference_styrene.csv
src/: deconv_app.py
src/in/references/: reference_isoprene.csv
src/sptoolkit/: __init__.py
src/sptoolkit/deconv/: __init__.py  array_ops.py  cli.py  constants.py  fitting.py  models.py  paths.py  peak_params.py  spectrum_io.py
tests/: test_fitting.py  test_peak_params.py  test_spectrum_io.py
